--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://metatags.io/" />
+  <meta property="og:url" content="https://sparrowrk.github.io/Store/" />
   <meta property="og:title" content="My react Store project" />
-  <meta property="og:description" content="" />
-  <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+  <meta property="og:description" content="Мое первое виденье небольшого интернет магазина" />
+  <meta property="og:image" content="https://sparrowrk.github.io/Store/img/storemeta.jpg" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://metatags.io/" />
+  <meta property="twitter:url" content="https://sparrowrk.github.io/Store/" />
   <meta property="twitter:title" content="My react Store project" />
-  <meta property="twitter:description" content="" />
-  <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+  <meta property="twitter:description" content="Мое первое виденье небольшого интернет магазина" />
+  <meta property="twitter:image" content="https://sparrowrk.github.io/Store/img/storemeta.jpg" />
 
   <!-- Meta Tags Generated -->
   <link rel="apple-touch-icon" sizes="57x57" href="img/fav/apple-icon-57x57.png">
